Release 2.1 (SNAPSHOT)

New Features
  * The !N history recall now allows negative values, so "!-2" means
    you want to edit query you executed two queries prior.

Bug Fixes
  * The visual timer is better about clearing itself before results are
    displayed
  * Connection variables, such as $server, will expand correctly now. 
    Previously these would only contain a value if the value was provided 
    explicitly, but when the value was provided explicitly by the driver
    definition, the value would be null.

Release 2.0

New Features
  * The command terminator may now end a jsqsh command. For example, the
    following are now legal:
          1> quit;
    or
          1> \echo hello how are you;
          hello how are you
          
  * Added new SQL display style "json". 

  * Added $histid variable that contains the current buffer number you are 
    working on. Really useful for adding to your prompt.
    
  * Added support for ARRAY data type and hopefully better support for
    unrecognized data types.
    
  * Added \show command which can display almost all of the major database
    metadata information (tables, functions, columns, procedures, etc.).
    See "\help show" for details.

  * Added \prepare command. The command is mostly used for diagnosing JDBC
    driver issues/functionality and prepares a SQL statement against the
    server than displays metadata about the prepared statement, such as
    what the final result set will look like and the data types of any
    parameter markers.
    
  * Added $fetchsize variable to set the JDBC Statement.fetchSize() property.
  
  * Added $editing_mode to allow you to set the editing keymap. Currently
    this is only supported by JLine, so to switch to "vi" mode, do:
       \set editing_mode=vi

  * Added ${ex_detail} to adjust the level of detail in exceptions (e.g.
    whether or not stack traces are included in the output).
       